--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+:root {
+  --color-1e2e42: #1e2e42;
+  --color-3b4149: #3b4149;
+  --color-febd69: #febd69;
+  --color-28384b: #28384b;
+}
+
 body {
   font-family: "Rubik", sans-serif;
 }
@@ -12,3 +19,79 @@ a {
   text-decoration: none;
   display: inline-block;
 }
+
+.form-control:focus {
+  box-shadow: none;
+  border-color: inherit;
+}
+
+.gap-10 {
+  gap: 10px;
+}
+
+.gap-15 {
+  gap: 15px;
+}
+.gap-30 {
+  gap: 30px;
+}
+
+/* //For Header// */
+.header-top-strip {
+  border-bottom: 1px solid var(--color-3b4149);
+  background-color: var(--color-1e2e42);
+}
+
+.header-upper {
+  background-color: var(--color-1e2e42);
+}
+
+.header-upper .input-group-text {
+  background-color: var(--color-febd69);
+}
+
+.header-upper.header-upper-links {
+  width: 35px;
+  height: 35px;
+}
+
+.header-bottom {
+  background-color: var(--color-28384b);
+}
+
+.header-bottom .menu-links a,
+.header-bottom .dropdown button {
+  color: white;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: 0.3;
+  text-transform: uppercase;
+}
+
+/* .header-bottom .dropdown button::before {
+  contain: url("../public/images/menu.svg");
+} */
+
+.header-bottom .dropdown button {
+  box-shadow: none;
+}
+
+.header-bottom .dropdown-menu {
+  background-color: var(--color-1e2e42);
+  width: 100%;
+  transform: translate3d(0px, 57px, 0px) !important;
+}
+
+.header-bottom .dropdown-item {
+  padding: 20px;
+  margin-bottom: 3px;
+  border-bottom: 1px solid var(--color-28384b);
+}
+
+.header-bottom .dropdown-item:hover {
+  color: var(--color-febd69) !important;
+  background-color: transparent;
+}
+
+/* End Header */
