--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,24 @@
   --color-3b4149: #3b4149;
   --color-febd69: #febd69;
   --color-28384b: #28384b;
+  --color-bf3800: #bf4700;
+  --color-f5f5f7: #f5f5f7;
+  --color-ededed: #ededed;
+  --color-777777: #777777;
+  --color-1c1c1b: #1c1c1b;
+}
+
+.section-heading {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+.card-wrapper {
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
 }
 
 body {
@@ -34,6 +52,19 @@ a {
 }
 .gap-30 {
   gap: 30px;
+}
+
+.button {
+  background-color: var(--color-28384b);
+  padding: 13px 33px;
+  font-size: 14px;
+  color: white;
+  border-radius: 26px;
+}
+
+.button:hover {
+  background-color: var(--color-febd69);
+  color: #3b4149;
 }
 
 /* //For Header// */
@@ -115,3 +146,174 @@ footer .input-group-text {
   padding: 8px 17px;
 }
 /* End Footer */
+
+/* Start Home */
+.main-banner-content {
+  top: 15%;
+  left: 5%;
+}
+
+.main-banner-content h4 {
+  font-size: 15px;
+  line-height: 24px;
+  font-weight: 400;
+  margin: 0 0 12px;
+  color: var(--color-bf3800);
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.main-banner-content h5 {
+  font-size: 42px;
+  line-height: 54px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+
+.main-banner-content p {
+  font-size: 18px;
+  letter-spacing: 0.4;
+  line-height: 28px;
+  color: var(--color-1e2e42);
+}
+.small-banner-content {
+  top: 20%;
+  left: 10%;
+}
+
+.small-banner-content h4 {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 400;
+  margin: 0 0 12px;
+  color: var(--color-bf3800);
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+
+.small-banner-content h5 {
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -2px;
+  font-weight: 500;
+  text-transform: none;
+}
+
+.small-banner-content p {
+  font-size: 14px;
+  letter-spacing: 0.4;
+  line-height: 22px;
+  color: var(--color-1e2e42);
+}
+
+.small-banner {
+  width: 49%;
+}
+
+/* home wrapper -2 */
+.home-wrapper-2 {
+  background-color: var(--color-f5f5f7);
+}
+/* end home wrapper */
+
+/* start catergories */
+
+.categories {
+  background-color: white;
+  box-shadow: 0 0 10px #0000001a;
+  padding: 15px;
+}
+
+.categories > div {
+  width: 25%;
+  padding: 10px 10px 10px 20px;
+}
+
+.categories > div > div {
+  width: 60%;
+}
+
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3),
+.categories > div:nth-child(4) {
+  border-bottom: 1px solid var(--color-f5f5f7);
+}
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3) {
+  border-right: 1px solid var(--color-ededed);
+}
+.categories > div:nth-child(5),
+.categories > div:nth-child(6),
+.categories > div:nth-child(7) {
+  border-right: 1px solid var(--color-ededed);
+}
+
+/* end categories */
+
+/* End Home */
+
+/* Start Blogs */
+.blog-card {
+  background-color: white;
+
+  border-radius: 10px;
+}
+
+.blog-card img {
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+.blog-content {
+  padding: 15px;
+}
+
+.blog-content p.date {
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-777777);
+  padding: 0;
+}
+
+.blog-content h5 {
+  font-size: 20px;
+  color: var(--color-1e2e42);
+}
+
+.blog-content p.desc {
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
+/* End Blogs */
+
+/* Start ProductCard */
+.product-card {
+  padding: 15px;
+  background-color: white;
+  box-shadow: 0;
+  border-radius: 10px;
+}
+
+.product-card .product-details h6 {
+  color: var(--color-bf3800);
+  font-size: 13px;
+}
+
+.product-card .product-details h5 {
+  font-size: 15px;
+  color: var(--color-1c1c1b);
+}
+
+.product-card .product-details p.price {
+  color: var(--color-1c1c1b);
+  font-size: 16px;
+}
+
+/* End ProductCard */
