--- a/src/App.css
+++ b/src/App.css
@@ -311,6 +311,12 @@ footer .input-group-text {
   height: 270px;
 }
 
+.product-card p.description {
+  color: var(--color-777777);
+  font-size: 13px;
+  margin-right: 20px;
+}
+
 .product-card .product-image img {
   object-fit: contain;
   transition: 0.3s ease-in;
@@ -500,5 +506,30 @@ footer .input-group-text {
 }
 .gr-3 {
   width: 24%;
+}
+
+.gr-12 .product-card {
+  display: flex;
+  gap: 20px;
+}
+
+.gr-12 .product-card .product-image {
+  height: auto;
+}
+
+.gr-6 .product-image {
+  width: 100%;
+}
+
+.gr-6 .product-image img {
+  margin: auto;
+  display: block;
+}
+
+.gr-12 .action-bar {
+  top: 17%;
+}
+.gr-12 .product-card .product-image {
+  width: 270px;
 }
 /* End Our Store */
