--- a/src/App.css
+++ b/src/App.css
@@ -571,3 +571,41 @@ footer .input-group-text {
   color: var(--color-777777);
 }
 /* End Contact */
+
+/* Start CompareProductPage */
+
+.compare-product-card {
+  padding: 20px 15px;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.compare-product-card .cross {
+  top: 10px;
+  right: 10px;
+  padding: 4px;
+  width: 25px;
+  cursor: pointer;
+}
+
+.compare-product-details h5.title {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 500;
+  color: var(--color-1c1c1b);
+}
+
+.compare-product-details h6.price {
+  font-size: 15px;
+  line-height: 22px;
+  font-weight: 400;
+}
+
+.compare-product-card .product-detail {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0px;
+  border-top: 1px solid var(--color-f5f5f7);
+}
+/* End CompareProductPage */
